--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <!--------- HEADER --------->
     <header class="header">
         <div class="header-left">
-            <h1><a href="home.html">Discover Taniti</a></h1>
-            <p><a href="home.html">Adventure. Culture. Relaxation.</a></p>
+            <h1><a href="index.html">Discover Taniti</a></h1>
+            <p><a href="index.html">Adventure. Culture. Relaxation.</a></p>
         </div>
         <div class="header-right">
             <a href="booking.html" class="book-now-btn">Book Now</a>
@@ -20,7 +20,7 @@
 <!--------- NAVIGATION --------->
     <nav class="nav-bar">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="booking.html">Booking</a></li>
         </ul>
     </nav>
@@ -84,7 +84,7 @@
         <div class="footer-left">
             <h4>Quick Links</h4>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="booking.html">Booking</a></li>
                 <li><a href="booking.html">FAQs</a></li>
             </ul>
@@ -92,7 +92,7 @@
         </div>
   
         <div class="footer-right">
-            <h2 class="taniti-branding"><a href="home.html">Taniti</a></h2>
+            <h2 class="taniti-branding"><a href="index.html">Taniti</a></h2>
         </div>
   </footer>
 
